--- a/stile.css
+++ b/stile.css
@@ -3,3 +3,76 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* header */
+header{
+    background-color: blue;
+    height: 5rem;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    /* position: fixed; */
+    
+}
+.head1{
+    width: 30%;
+    height:80%;
+    
+    display: flex;
+    flex-direction: row;
+}
+.head2{
+    width: 30%;
+    height:80%;
+    
+    display: flex;
+    flex-direction: row;
+}
+.logo{
+    border-radius: 5px;
+
+    height:100%;
+    width: 25%;
+    border-style: dashed;
+}
+.button{
+    border-radius: 5px;
+    height:100%;
+    width: 25%;
+    border-style: dashed;
+}
+/* main */
+.blocco1{
+    display: flex;
+    margin-top: 0%;
+    height: 40rem;
+    border-style: dashed;
+    background-color: aqua;
+    flex-direction: column;
+    align-items: center;
+
+}
+.card_b1{
+    margin-top:5%;
+    border-style: dashed;
+    height: 30%;
+    width: 70%;
+}
+.card_b2{
+   
+    border-style: dashed;
+    height: 100%;
+    width: 30%;
+}
+.card_b3{
+    background-color: violet;
+    border-style: dashed;
+    height: 100%;
+    width: 70%;
+}
+.container{
+    display: flex;
+    height: 60%;
+    width: 70%;
+}
+
+/* footer */
