--- a/stile.css
+++ b/stile.css
@@ -140,5 +140,46 @@ header{
     justify-content:space-between;
     align-items: center;
 }
+/******************blocco3******************/
+.blocco3{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0%;
+    height: 30rem;
+    width: 100%;
+    border-style: dashed;
+    background-color: aqua;
+    align-items: center;  
+}
+.card3_b1{
+    background-color: violet;
+    border-style: dashed;
+    height: 100%;
+    width: 40%;
+}
+.card3_b2{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: violet;
+    border-style: dashed;
+    height: 100%;
+    width: 20%;
+}
+/****************Blocco4****************/
+.blocco4{
+    display: flex;
+    margin-top: 0%;
+    height:fit-content;
+    width: 100%;
+    border-style: dashed;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+}
+
 
 /* footer */
