--- a/stile.css
+++ b/stile.css
@@ -294,24 +294,28 @@ header{
     background-color: rgb(0, 0, 0);
     border-style: dashed;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
+   
+    
 }
+.container8{
+    display: flex;
+    justify-content: center; 
+    border-style: dashed;
+}
+
 .card_b8{
-    margin: 4%;
+    margin: 3%;
     color: white;
 }
 h3{
     margin-bottom: 1rem;
 }
 .final{
-    position: absolute;
- 
-    left: 0;
-    background-color: blueviolet;
     border-top-color: aliceblue ;
     color: white;
-    height:3rem ;
-    width: fit-content;
+    padding-top: 3%;
+    margin-left: 14% ;
+    width: 10%;
+    border-top: solid;
+    border-color: white;
 }
